# rentwise

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  start-macos.sh  start.sh
apps/api/: Dockerfile  Dockerfile.entrypoint.sh  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_llm_settings.py  0003_capture.py  0004_geocode_cache.py  0005_listings_transit.py  0006_dedup.py  0007_saved_searches.py  0008_alerts.py  0009_web_push.py  0010_drop_capture.py
apps/api/rentwise/: __init__.py  main.py  models.py  settings.py
apps/api/rentwise/adapters/: __init__.py  base.py  demo.py  playwright_fetcher.py  playwright_pool.py  ratelimit.py  robots.py  scaffold_base.py
apps/api/rentwise/aggregator/: __init__.py  freshness.py  service.py  streaming.py
apps/api/rentwise/capture/: auth.py  pairing.py  router.py  schemas.py
apps/api/rentwise/dedup/: __init__.py  scoring.py  service.py
apps/api/rentwise/enrichment/: __init__.py  address.py  geocode.py  neighborhoods.py  photo_hash.py  school_catchments.py  service.py  transit.py
apps/api/rentwise/http/: map_overlays.py  search.py  searches.py  web_push.py
apps/api/rentwise/insights/: __init__.py  neighborhood.py
apps/api/rentwise/llm/: __init__.py  client.py  errors.py  prompts.py  result.py  settings_crypto.py  settings_models.py
apps/api/rentwise/notifications/: digest.py  email.py  runner.py  scheduler.py  web_push.py
apps/api/scripts/: gen_vapid.py  record_craigslist_fixture.py  refresh_school_catchments.py
apps/api/tests/: conftest.py  test_main.py  test_models.py  test_settings.py
docs/: legal.md  (+6 more)
(+290 files in other folders)
