[project]
name = "rentwise-api"
version = "0.1.0"
description = "RentWise backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "litellm>=1.52.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "playwright>=1.48.0",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "vcrpy>=6.0.2",
    "respx>=0.21.1",
    "hypothesis>=6.115.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF"]
ignore = ["E501", "B008"]  # E501: line length handled by formatter; B008: FastAPI Depends() in defaults is intentional

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: end-to-end pipeline tests (use recorded fixtures, not live HTTP)",
    "property: Hypothesis property-based tests",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["feedparser", "respx", "alembic.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rentwise*"]
